# agg

./: CMakeLists.txt  COPYRIGHT  README.md  conanfile.txt
gpc/: gpc.c
src/: agg_gsv_text.cpp
